--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -196,13 +196,14 @@ ordinal numbers that were shown above.
 The seasons were chosen to reflect what unique characteristic each season has. We've
 also got ways to describe the seasons in equatorial regions too.
 
-Season,Hisyëö,Abugida
-Spring,%%yogö|yogö%% %%üsën|üsën%% %%niök|niök%%,%%ɀꜿı|yogö%% %%ɽʄɐ̃ʇ|üsën%% %%ƨɟɽ̑ı|niök%%
-Summer,%%yogö|yogö%% %%üsën|üsën%% %%tüt|tüt%%,%%ɀꜿı|yogö%% %%ɽʄɐ̃ʇ|üsën%% %%c̆ʄ|tüt%%
-Autumn/Fall,%%yogö|yogö%% %%üsën|üsën%% %%kon|kon%% %%kudüdo|kudüdo%%,%%ɀꜿı|yogö%% %%ɽʄɐ̃ʇ|üsën%% %%ɔ̃|kon%% %%ɔʃʌʄʌ|kudüdo%%
-Winter,%%yogö|yogö%% %%üsën|üsën%% %%zunyü|zunyü%%,%%ɀꜿı|yogö%% %%ɽʄɐ̃ʇ|üsën%% %%ꞇ̃ʃɀʄ|zunyü%%
-Wet,%%yogö|yogö%% %%üsën|üsën%% %%nupuso|nupuso%%,%%ɀꜿı|yogö%% %%ɽʄɐ̃ʇ|üsën%% %%ƨʃʋʃɐ|nupuso%%
-Dry,%%yogö|yogö%% %%üsën|üsën%% %%ülgükin|ülgükin%%,%%ɀꜿı|yogö%% %%ɽʄɐ̃ʇ|üsën%% %%ɽ͊ʄꜿʄɔ̃ɟ|ülgükin%%
+| Season      | Hisyëö                                                    | Abugida                                                |
+| :---------- | :-------------------------------------------------------- | :----------------------------------------------------- |
+| Spring      | %%yogö|yogö%% %%üsën|üsën%% %%niök|niök%%                 | %%ɀꜿı|yogö%% %%ɽʄɐ̃ʇ|üsën%% %%ƨɟɽ̑ı|niök%%              |
+| Summer      | %%yogö|yogö%% %%üsën|üsën%% %%tüt|tüt%%                   | %%ɀꜿı|yogö%% %%ɽʄɐ̃ʇ|üsën%% %%c̆ʄ|tüt%%                 |
+| Autumn/Fall | %%yogö|yogö%% %%üsën|üsën%% %%kon|kon%% %%kudüdo|kudüdo%% | %%ɀꜿı|yogö%% %%ɽʄɐ̃ʇ|üsën%% %%ɔ̃|kon%% %%ɔʃʌʄʌ|kudüdo%% |
+| Winter      | %%yogö|yogö%% %%üsën|üsën%% %%zunyü|zunyü%%               | %%ɀꜿı|yogö%% %%ɽʄɐ̃ʇ|üsën%% %%ꞇ̃ʃɀʄ|zunyü%%            |
+| Wet         | %%yogö|yogö%% %%üsën|üsën%% %%nupuso|nupuso%%             | %%ɀꜿı|yogö%% %%ɽʄɐ̃ʇ|üsën%% %%ƨʃʋʃɐ|nupuso%%           |
+| Dry         | %%yogö|yogö%% %%üsën|üsën%% %%ülgükin|ülgükin%%           | %%ɀꜿı|yogö%% %%ɽʄɐ̃ʇ|üsën%% %%ɽ͊ʄꜿʄɔ̃ɟ|ülgükin%%        |
 
 ### Exact Dates
 
