--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -77,7 +77,7 @@ that you'll need to count all the way up to a trillion.
 
 ## Tens, Thousands, Millions
 
-As you can see above, you use the %%zën|zën%% with the number directly following
+As you can see above, you use the %%zën@zën%% with the number directly following
 it representing how many groups of 3 places. This is the same amount as we put
 commas or periods in our number representations.
 
@@ -90,22 +90,22 @@ here and they follow the rules shown above to generate their value or amount.
 
 <Tabs groupId="popöun-zıkto">
   <TabItem value="latin" label="Latin" default>
-    %%düi|düi%% %%viyën|viyën%% %%son|son%% %%höveȷi|höveȷi%% "two hundred and three cows"
+    %%düi@düi%% %%viyën@viyën%% %%son@son%% %%höveȷi@höveȷi%% "two hundred and three cows"
   </TabItem>
   <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
-    %%ʌʄɽɟ|düi%% %%ɤɟɀ̃ʇ|viyën%% %%ɐ̃|son%% %%ɂıɤɿⱴɟ|höveȷi%% "two hundred and three cows"
+    %%ʌʄɽɟ@düi%% %%ɤɟɀ̃ʇ@viyën%% %%ɐ̃@son%% %%ɂıɤɿⱴɟ@höveȷi%% "two hundred and three cows"
   </TabItem>
 </Tabs>
 
-If you specify only the number 1 (%%kut|kut%%), it acts like the indefinite
+If you specify only the number 1 (%%kut@kut%%), it acts like the indefinite
 article ("a/an" in English) but this is usually omitted.
 
 <Tabs groupId="popöun-zıkto">
   <TabItem value="latin" label="Latin" default>
-    %%kut|kut%% %%ënpokon|ënpokon%% "one burp" or "a burp"
+    %%kut@kut%% %%ënpokon@ënpokon%% "one burp" or "a burp"
   </TabItem>
   <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
-    %%ɔ̆ʃ|kut%% %%ɽ̃ʇʋɔ̃|ënpokon%% "one burp" or "a burp"
+    %%ɔ̆ʃ@kut%% %%ɽ̃ʇʋɔ̃@ënpokon%% "one burp" or "a burp"
   </TabItem>
 </Tabs>
 
@@ -136,10 +136,10 @@ side of a noun phrase.
 
 <Tabs groupId="popöun-zıkto">
   <TabItem value="latin" label="Latin" default>
-    %%nıwos|nıwos%% %%nonkü|nonkü%% %%do|do%% %%hoi|hoi%% %%ximol|ximol%% "third house on the left"
+    %%nıwos@nıwos%% %%nonkü@nonkü%% %%do@do%% %%hoi@hoi%% %%ximol@ximol%% "third house on the left"
   </TabItem>
   <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
-    %%ƨȷʒ́|nıwos%% %%ƨ̃ɔʄ|nonkü%% %%ʌ|do%% %%ɂɽɟ|hoi%% %%ɋɟƶ͊|ximol%% "third house on the left"
+    %%ƨȷʒ́@nıwos%% %%ƨ̃ɔʄ@nonkü%% %%ʌ@do%% %%ɂɽɟ@hoi%% %%ɋɟƶ͊@ximol%% "third house on the left"
   </TabItem>
 </Tabs>
 
@@ -159,17 +159,23 @@ The Hisyëö week days are, unlike the rest of the calendar, named after the mos
 prevalent color of the planets of our solar system as seen in true color
 photography of the planet. The start of the week was chosen as Monday to
 coincide with the near majority of the world agreement on this and it allows
-Saturday and Sunday to be the "Weekend" (%%könyëz|könyëz%% %%wëxön|wëxön%%).
+Saturday and Sunday to be the "Weekend" (%%könyëz@könyëz%% %%wëxön@wëxön%%).
 
-| Planet    | True Color Photo                                                                                                                                                                                           | English   | Hisyëö | Abugida          |
-| --- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | :-------- | :----- | :--------------- |
-| Mercury    | ![Mercury in true color (by MESSENGER in 2008) - Wikipedia](https://upload.wikimedia.org/wikipedia/commons/thumb/4/4a/Mercury_in_true_color.jpg/240px-Mercury_in_true_color.jpg)           | Monday    | %%lono | lono%% %%düsul   |düsul%%     | %%ʓƨ|lono%% %%ʌʄɐ͊ʃ|düsul%%
-| Venus | ![True colour image of Venus, as captured by MESSENGER - Wikipedia](https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Venus_2_Approach_Image.jpg/234px-Venus_2_Approach_Image.jpg) | Tuesday   | %%lono | lono%% %%mihüon  |mihüon%%   | %%ʓƨ|lono%% %%ƶɟɂʄɽ̃|mihüon%%
-| Earth | ![The Blue Marble, Apollo 17, December 1972](https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/The_Blue_Marble_%28remastered%29.jpg/240px-The_Blue_Marble_%28remastered%29.jpg) | Wednesday | %%lono | lono%% %%ȷöi     |ȷöi%%         | %%ʓƨ|lono%% %%ⱴıɽɟ|ȷöi%%
-| Mars | ![Mars, as captured by the Hope orbiter](https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/Mars_-_August_30_2021_-_Flickr_-_Kevin_M._Gill.png/240px-Mars_-_August_30_2021_-_Flickr_-_Kevin_M._Gill.png) | Thursday  | %%lono | lono%% %%zınöpu  |zınöpu%%   | %%ʓƨ|lono%% %%ꞇȷƨıʋʃ|zınöpu%%
-| Jupiter | ![This true-color simulated view of Jupiter is composed of 4 images taken by NASA's Cassini spacecraft on December 7, 2000 - Wikipedia](https://upload.wikimedia.org/wikipedia/commons/thumb/a/ab/Jupiter_in_true_color.jpg/248px-Jupiter_in_true_color.jpg) | Friday    | %%lono | lono%% %%ȷingu   |ȷingu%%     | %%ʓƨ|lono%% %%ⱴ̃ɟꜿʃ|ȷingu%%
-| Saturn | ![Original Caption Released with Image: NASA's Voyager 2 took this 'true color' photograph of Saturn on July 21, 1981, when the spacecraft was 33.9 million kilometers (21 million miles) from the planet. Two bright, presumably convective cloud patterns are visible in the mid-northern hemisphere and several dark spoke-like features can be seen in the broad B-ring (left of planet). The moons Rhea and Dione appear as blue dots to the south and southeast of Saturn, respectively. Voyager 2 made its closest approach to Saturn on Aug. 25, 1981. The Voyager project is managed for NASA by the Jet Propulsion Laboratory, Pasadena, Calif. - Wikipedia](https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/Saturn_With_Rhea_and_Dione_%28true_color%29.jpg/179px-Saturn_With_Rhea_and_Dione_%28true_color%29.jpg) | Saturday  | %%lono | lono%% %%onpulë  |onpulë%%   | %%ʓƨ|lono%% %%ɽ̃ʋʃʓʇ|onpulë%%
-| Uranus | ![This picture of Uranus in true color was compiled from images returned Jan. 17, 1986, by the narrow-angle camera of Voyager 2. - Wikipedia](https://upload.wikimedia.org/wikipedia/commons/thumb/2/2e/Uranus_true_colour.jpg/240px-Uranus_true_colour.jpg) | Sunday    | %%lono | lono%% %%xolxili |xolxili%% | %%ʓƨ|lono%% %%ɋ͊ɋɟʓɟ|xolxili%%
+| Planet  | True Color Photo                                                                                                                                                                                                                                                                                                                                                                         | English   | Hisyëö                            | Abugida                        |
+| ------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :-------- | :-------------------------------- | :----------------------------- |
+| Mercury | ![Mercury in true color (by MESSENGER in 2008) - Wikipedia](https://upload.wikimedia.org/wikipedia/commons/thumb/4/4a/Mercury_in_true_color.jpg/240px-Mercury_in_true_color.jpg)                                                                                                                                                                                                         | Monday    | %%lono@lono%% %%düsul@düsul%%     | %%ʓƨ@lono%% %%ʌʄɐ͊ʃ@düsul%%     |
+| Venus   | ![True colour image of Venus, as captured by MESSENGER - Wikipedia](https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Venus_2_Approach_Image.jpg/234px-Venus_2_Approach_Image.jpg)                                                                                                                                                                                               | Tuesday   | %%lono@lono%% %%mihüon@mihüon%%   | %%ʓƨ@lono%% %%ƶɟɂʄɽ̃@mihüon%%   |
+| Earth   | ![The Blue Marble, Apollo 17, December 1972](https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/The_Blue_Marble_%28remastered%29.jpg/240px-The_Blue_Marble_%28remastered%29.jpg)                                                                                                                                                                                                  | Wednesday | %%lono@lono%% %%ȷöi@ȷöi%%         | %%ʓƨ@lono%% %%ⱴıɽɟ@ȷöi%%      |
+| Mars    | ![Mars, as captured by the Hope orbiter](https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/Mars_-_August_30_2021_-_Flickr_-_Kevin_M._Gill.png/240px-Mars_-_August_30_2021_-_Flickr_-_Kevin_M._Gill.png)                                                                                                                                                                          | Thursday  | %%lono@lono%% %%zınöpu@zınöpu%%   | %%ʓƨ@lono%% %%ꞇȷƨıʋʃ@zınöpu%% |
+| Jupiter | ![This true-color simulated view of Jupiter is composed of 4 images taken by NASA's Cassini spacecraft on December 7, 2000 - Wikipedia](https://upload.wikimedia.org/wikipedia/commons/thumb/a/ab/Jupiter_in_true_color.jpg/248px-Jupiter_in_true_color.jpg)                                                                                                                             | Friday    | %%lono@lono%% %%ȷingu@ȷingu%%     | %%ʓƨ@lono%% %%ⱴ̃ɟꜿʃ@ȷingu%%   |
+| Saturn  | ![Original Caption Released with Image: NASA's Voyager 2 took this 'true color' photograph of Saturn on July 21, 1981, when the spacecraft was 33.9 million kilometers (21 million miles) from the planet. - Wikipedia](https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/Saturn_With_Rhea_and_Dione_%28true_color%29.jpg/179px-Saturn_With_Rhea_and_Dione_%28true_color%29.jpg) | Saturday  | %%lono@lono%% %%onpulë@onpulë%%   | %%ʓƨ@lono%% %%ɽ̃ʋʃʓʇ@onpulë%%   |
+| Uranus  | ![This picture of Uranus in true color was compiled from images returned Jan. 17, 1986, by the narrow-angle camera of Voyager 2. - Wikipedia](https://upload.wikimedia.org/wikipedia/commons/thumb/2/2e/Uranus_true_colour.jpg/240px-Uranus_true_colour.jpg)                                                                                                                             | Sunday    | %%lono@lono%% %%xolxili@xolxili%% | %%ʓƨ@lono%% %%ɋ͊ɋɟʓɟ@xolxili%%  |
+
+In order to indicate a specific day use one of the demonstrative pronouns
+(%%övo@övo%%, %%ulyö@ulyö%%, %%onö@onö%%). Otherwise, a weekday (or really any
+use of %%lono@lono%%) is either one or many unspecified
+days.
+
 
 ### Months of the Year
 
@@ -178,18 +184,18 @@ ordinal numbers that were shown above.
 
 | Month     | Hisyëö                          | Abugida                     |
 | :-------- | :------------------------------ | :-------------------------- |
-| January   | %%wuto|wuto%% %%kut|kut%%       | %%ʒʃc|wuto%% %%ɔ̆ʃ|kut%%     |
-| February  | %%wuto|wuto%% %%düi|düi%%       | %%ʒʃc|wuto%% %%ʌʄɽɟ|düi%%   |
-| March     | %%wuto|wuto%% %%son|son%%       | %%ʒʃc|wuto%% %%ɐ̃|son%%      |
-| April     | %%wuto|wuto%% %%nonkü|nonkü%%   | %%ʒʃc|wuto%% %%ƨ̃ɔʄ|nonkü%%  |
-| May       | %%wuto|wuto%% %%pızku|pızku%%   | %%ʒʃc|wuto%% %%ʋ̄ȷɔʃ|pızku%% |
-| June      | %%wuto|wuto%% %%toü|toü%%       | %%ʒʃc|wuto%% %%cɽʄ|toü%%    |
-| July      | %%wuto|wuto%% %%xëti|xëti%%     | %%ʒʃc|wuto%% %%ɋʇcɟ|xëti%%  |
-| August    | %%wuto|wuto%% %%tukwos|tukwos%% | %%ʒʃc|wuto%% %%c̑ʃʒ́|tukwos%% |
-| September | %%wuto|wuto%% %%tiso|tiso%%     | %%ʒʃc|wuto%% %%cɟɐ|tiso%%   |
-| October   | %%wuto|wuto%% %%dus|dus%%       | %%ʒʃc|wuto%% %%ʌ́ʃ|dus%%     |
-| November  | %%wuto|wuto%% %%önsu|önsu%%     | %%ʒʃc|wuto%% %%ɽ̃ıɐʃ|önsu%%  |
-| December  | %%wuto|wuto%% %%pole|pole%%     | %%ʒʃc|wuto%% %%ʋʓɿ|pole%%   |
+| January   | %%wuto@wuto%% %%kut@kut%%       | %%ʒʃc@wuto%% %%ɔ̆ʃ@kut%%     |
+| February  | %%wuto@wuto%% %%düi@düi%%       | %%ʒʃc@wuto%% %%ʌʄɽɟ@düi%%   |
+| March     | %%wuto@wuto%% %%son@son%%       | %%ʒʃc@wuto%% %%ɐ̃@son%%      |
+| April     | %%wuto@wuto%% %%nonkü@nonkü%%   | %%ʒʃc@wuto%% %%ƨ̃ɔʄ@nonkü%%  |
+| May       | %%wuto@wuto%% %%pızku@pızku%%   | %%ʒʃc@wuto%% %%ʋ̄ȷɔʃ@pızku%% |
+| June      | %%wuto@wuto%% %%toü@toü%%       | %%ʒʃc@wuto%% %%cɽʄ@toü%%    |
+| July      | %%wuto@wuto%% %%xëti@xëti%%     | %%ʒʃc@wuto%% %%ɋʇcɟ@xëti%%  |
+| August    | %%wuto@wuto%% %%tukwos@tukwos%% | %%ʒʃc@wuto%% %%c̑ʃʒ́@tukwos%% |
+| September | %%wuto@wuto%% %%tiso@tiso%%     | %%ʒʃc@wuto%% %%cɟɐ@tiso%%   |
+| October   | %%wuto@wuto%% %%dus@dus%%       | %%ʒʃc@wuto%% %%ʌ́ʃ@dus%%     |
+| November  | %%wuto@wuto%% %%önsu@önsu%%     | %%ʒʃc@wuto%% %%ɽ̃ıɐʃ@önsu%%  |
+| December  | %%wuto@wuto%% %%pole@pole%%     | %%ʒʃc@wuto%% %%ʋʓɿ@pole%%   |
 
 ### Seasons
 
@@ -198,14 +204,25 @@ also got ways to describe the seasons in equatorial regions too.
 
 | Season      | Hisyëö                                                    | Abugida                                                |
 | :---------- | :-------------------------------------------------------- | :----------------------------------------------------- |
-| Spring      | %%yogö|yogö%% %%üsën|üsën%% %%niök|niök%%                 | %%ɀꜿı|yogö%% %%ɽʄɐ̃ʇ|üsën%% %%ƨɟɽ̑ı|niök%%              |
-| Summer      | %%yogö|yogö%% %%üsën|üsën%% %%tüt|tüt%%                   | %%ɀꜿı|yogö%% %%ɽʄɐ̃ʇ|üsën%% %%c̆ʄ|tüt%%                 |
-| Autumn/Fall | %%yogö|yogö%% %%üsën|üsën%% %%kon|kon%% %%kudüdo|kudüdo%% | %%ɀꜿı|yogö%% %%ɽʄɐ̃ʇ|üsën%% %%ɔ̃|kon%% %%ɔʃʌʄʌ|kudüdo%% |
-| Winter      | %%yogö|yogö%% %%üsën|üsën%% %%zunyü|zunyü%%               | %%ɀꜿı|yogö%% %%ɽʄɐ̃ʇ|üsën%% %%ꞇ̃ʃɀʄ|zunyü%%            |
-| Wet         | %%yogö|yogö%% %%üsën|üsën%% %%nupuso|nupuso%%             | %%ɀꜿı|yogö%% %%ɽʄɐ̃ʇ|üsën%% %%ƨʃʋʃɐ|nupuso%%           |
-| Dry         | %%yogö|yogö%% %%üsën|üsën%% %%ülgükin|ülgükin%%           | %%ɀꜿı|yogö%% %%ɽʄɐ̃ʇ|üsën%% %%ɽ͊ʄꜿʄɔ̃ɟ|ülgükin%%        |
+| Spring      | %%yogö@yogö%% %%üsën@üsën%% %%niök@niök%%                 | %%ɀꜿı@yogö%% %%ɽʄɐ̃ʇ@üsën%% %%ƨɟɽ̑ı@niök%%              |
+| Summer      | %%yogö@yogö%% %%üsën@üsën%% %%tüt@tüt%%                   | %%ɀꜿı@yogö%% %%ɽʄɐ̃ʇ@üsën%% %%c̆ʄ@tüt%%                 |
+| Autumn/Fall | %%yogö@yogö%% %%üsën@üsën%% %%kon@kon%% %%kudüdo@kudüdo%% | %%ɀꜿı@yogö%% %%ɽʄɐ̃ʇ@üsën%% %%ɔ̃@kon%% %%ɔʃʌʄʌ@kudüdo%% |
+| Winter      | %%yogö@yogö%% %%üsën@üsën%% %%zunyü@zunyü%%               | %%ɀꜿı@yogö%% %%ɽʄɐ̃ʇ@üsën%% %%ꞇ̃ʃɀʄ@zunyü%%            |
+| Wet         | %%yogö@yogö%% %%üsën@üsën%% %%nupuso@nupuso%%             | %%ɀꜿı@yogö%% %%ɽʄɐ̃ʇ@üsën%% %%ƨʃʋʃɐ@nupuso%%           |
+| Dry         | %%yogö@yogö%% %%üsën@üsën%% %%ülgükin@ülgükin%%           | %%ɀꜿı@yogö%% %%ɽʄɐ̃ʇ@üsën%% %%ɽ͊ʄꜿʄɔ̃ɟ@ülgükin%%        |
 
 ### Exact Dates
+
+Specifying an exact date involves combining several of these elements together.
+
+<Tabs groupId="popöun-zıkto">
+  <TabItem value="latin" label="Latin" default>
+    %%nıwos@nıwos%% %%nonkü@nonkü%% %%do@do%% %%hoi@hoi%% %%ximol@ximol%% "third house on the left"
+  </TabItem>
+  <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
+    %%ƨȷʒ́@nıwos%% %%ƨ̃ɔʄ@nonkü%% %%ʌ@do%% %%ɂɽɟ@hoi%% %%ɋɟƶ͊@ximol%% "third house on the left"
+  </TabItem>
+</Tabs>
 
 ## Talk The Clock
 
