add more date info

--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -173,8 +173,20 @@ Saturday and Sunday to be the "Weekend" (%%könyëz@könyëz%% %%wëxön@wëxön
 
 In order to indicate a specific day use one of the demonstrative pronouns
 (%%övo@övo%%, %%ulyö@ulyö%%, %%onö@onö%%). Otherwise, a weekday (or really any
-use of %%lono@lono%%) is either one or many unspecified
-days.
+use of %%lono@lono%%) is either one or many unspecified days. You can use a day
+as a condition in a %%win@win%% prepositional phrase:
+
+<Tabs groupId="popöun-zıkto">
+  <TabItem value="latin" label="Latin" default>
+    <p>%%win@win%% %%xokön@xokön%% %%lono@lono%% %%xolxili@xolxili%%, %%lı@lı%% %%si@si%% %%lö@lö%% %%xopëk@xopëk%% %%müt@müt%% %%motüo@motüo%% %%sënȷö@sënȷö%%</p>
+    <em>"Every Sunday, we used to go to grandpa's</em>
+  </TabItem>
+  <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
+    <p>%%ʒ̃ɟ@win%% %%ɋɔ̃ı@xokön%% %%ʓƨ@lono%% %%ɋ͊ɋɟʓɟ@xolxili%% %%ʓȷ@lı%% %%ɐɟ@si%% %%ʓı@lö%% %%ɋʋ̑ʇ@xopëk%% %%ƶ̆ʄ@müt%% %%ƶcʄɽ@motüo%% %%ɐ̃ʇⱴı@sënȷö%%</p>
+    <em>"Every Sunday, we used to go to grandpa's</em>
+  </TabItem>
+</Tabs>
+
 
 
 ### Months of the Year
@@ -197,6 +209,24 @@ ordinal numbers that were shown above.
 | November  | %%wuto@wuto%% %%önsu@önsu%%     | %%ʒʃc@wuto%% %%ɽ̃ıɐʃ@önsu%%  |
 | December  | %%wuto@wuto%% %%pole@pole%%     | %%ʒʃc@wuto%% %%ʋʓɿ@pole%%   |
 
+To remember which months have 31, 30, and 28 days, try using this children's
+rhyme:
+
+:::warning Caution
+
+WIP Translation
+
+:::
+
+%%zö@zö%% %%son@son%% %%dus@dus%% %%lono@lono%% %%lı@lı%% %%yünyuü@yünyuü%% %%ü@ü%% %%wuto@wuto%% %%tiso@tiso%%,
+%%wuto@wuto%% %%nonkü@nonkü%%, %%wuto@wuto%% %%toü@toü%%, %%moliȷü@moliȷü%% %%wuto@wuto%% %%önsu@önsu%%,
+%%ü@ü%% %%möi@möi%% %%diȷel@diȷel%% %%lı@lı%% %%yünyuü@yünyuü%% %%zö@zö%% %%son@son%% %%dus@dus%% %%kut@kut%%,
+%%lëkın@lëkın%% %%ü@ü%% %%yök@yök%% %%wuto@wuto%% %%düi@düi%%.
+%%yünyuü@yünyuü%% %%ü@ü%% %%loı@loı%% %%zö@zö%% %%düi@düi%% %%dus@dus%% %%tukwos@tukwos%% %%lono@lono%%,
+%%lëkın@lëkın%% %%hoi@hoi%% %%xokön@xokön%% %%üsën@üsën%% %%nonkü@nonkü%%, zö %%düi@düi%% %%dus@dus%% %%tiso@tiso%% %%lono@lono%%
+
+[Wikipedia](https://en.wikipedia.org/wiki/Thirty_Days_Hath_September)
+
 ### Seasons
 
 The seasons were chosen to reflect what unique characteristic each season has. We've
@@ -211,16 +241,20 @@ also got ways to describe the seasons in equatorial regions too.
 | Wet         | %%yogö@yogö%% %%üsën@üsën%% %%nupuso@nupuso%%             | %%ɀꜿı@yogö%% %%ɽʄɐ̃ʇ@üsën%% %%ƨʃʋʃɐ@nupuso%%           |
 | Dry         | %%yogö@yogö%% %%üsën@üsën%% %%ülgükin@ülgükin%%           | %%ɀꜿı@yogö%% %%ɽʄɐ̃ʇ@üsën%% %%ɽ͊ʄꜿʄɔ̃ɟ@ülgükin%%        |
 
+To say something is "in the summer" or similar, supply one of these as the
+object of a %%hoi@hoi%% preposition.
+
 ### Exact Dates
 
-Specifying an exact date involves combining several of these elements together.
+Specifying an exact date involves using ordinals for the day, the week day
+terms, and ordinals for the months.
 
 <Tabs groupId="popöun-zıkto">
   <TabItem value="latin" label="Latin" default>
-    %%nıwos@nıwos%% %%nonkü@nonkü%% %%do@do%% %%hoi@hoi%% %%ximol@ximol%% "third house on the left"
+    %%lono@lono%% %%kut@kut%% %%yë@yë%% %%wuto@wuto%% %%son@son%% %%ü@ü%% %%lono@lono%% %%övo@övo%% <em>"Today is the March 1st"</em>
   </TabItem>
   <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
-    %%ƨȷʒ́@nıwos%% %%ƨ̃ɔʄ@nonkü%% %%ʌ@do%% %%ɂɽɟ@hoi%% %%ɋɟƶ͊@ximol%% "third house on the left"
+    %%ʓƨ@lono%% %%ɔ̆ʃ@kut%% %%ɀʇ@yë%% %%ʒʃc@wuto%% %%ɐ̃@son%% %%ɽʄ@ü%% %%ʓƨ@lono%% %%ɽıɤ@övo%% <em>"Today is the March 1st"</em>
   </TabItem>
 </Tabs>
 
