expand date and year info

--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -221,9 +221,9 @@ WIP Translation
 %%zö@zö%% %%son@son%% %%dus@dus%% %%lono@lono%% %%lı@lı%% %%yünyuü@yünyuü%% %%ü@ü%% %%wuto@wuto%% %%tiso@tiso%%,
 %%wuto@wuto%% %%nonkü@nonkü%%, %%wuto@wuto%% %%toü@toü%%, %%moliȷü@moliȷü%% %%wuto@wuto%% %%önsu@önsu%%,
 %%ü@ü%% %%möi@möi%% %%diȷel@diȷel%% %%lı@lı%% %%yünyuü@yünyuü%% %%zö@zö%% %%son@son%% %%dus@dus%% %%kut@kut%%,
-%%lëkın@lëkın%% %%ü@ü%% %%yök@yök%% %%wuto@wuto%% %%düi@düi%%.
-%%yünyuü@yünyuü%% %%ü@ü%% %%loı@loı%% %%zö@zö%% %%düi@düi%% %%dus@dus%% %%tukwos@tukwos%% %%lono@lono%%,
-%%lëkın@lëkın%% %%hoi@hoi%% %%xokön@xokön%% %%üsën@üsën%% %%nonkü@nonkü%%, zö %%düi@düi%% %%dus@dus%% %%tiso@tiso%% %%lono@lono%%
+%%ü@ü%% %%yök@yök%% %%wuto@wuto%% %%düi@düi%% %%do@do%% %%hoi@hoi%% %%düi@düi%% %%dus@dus%% %%tukwos@tukwos%% %%lono@lono%%,
+%%lëkın@lëkın%% %%ü@ü%% %%üsën@üsën%% %%ȷoston@ȷoston%% %%hoi@hoi%% %%xokön@xokön%% %%nonkü@nonkü%%,
+%%zö@zö%% %%eswen@eswen%% %%kut@kut%% %%lono@lono%% %%lı@lı%% %%yünyuü@yünyuü%%
 
 [Wikipedia](https://en.wikipedia.org/wiki/Thirty_Days_Hath_September)
 
@@ -251,11 +251,42 @@ terms, and ordinals for the months.
 
 <Tabs groupId="popöun-zıkto">
   <TabItem value="latin" label="Latin" default>
-    %%lono@lono%% %%kut@kut%% %%yë@yë%% %%wuto@wuto%% %%son@son%% %%ü@ü%% %%lono@lono%% %%övo@övo%% <em>"Today is the March 1st"</em>
+    <p>%%lono@lono%% %%kut@kut%% %%yë@yë%% %%wuto@wuto%% %%son@son%% %%ü@ü%% %%lono@lono%% %%övo@övo%% <em>"Today is the March 1st"</em></p>
+    <p>%%lono@lono%% %%löȷiz@löȷiz%% %%loı@loı%% %%ü@ü%% %%lono@lono%% %%mihüon@mihüon%% %%yë@yë%% %%lono@lono%% %%sitsi@sitsi%% %%yë@yë%% %%wuto@wuto%% %%pızku@pızku%% <em>"His birthday is Tuesday, May 14th"</em></p>
   </TabItem>
   <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
-    %%ʓƨ@lono%% %%ɔ̆ʃ@kut%% %%ɀʇ@yë%% %%ʒʃc@wuto%% %%ɐ̃@son%% %%ɽʄ@ü%% %%ʓƨ@lono%% %%ɽıɤ@övo%% <em>"Today is the March 1st"</em>
+    <p>%%ʓƨ@lono%% %%ɔ̆ʃ@kut%% %%ɀʇ@yë%% %%ʒʃc@wuto%% %%ɐ̃@son%% %%ɽʄ@ü%% %%ʓƨ@lono%% %%ɽıɤ@övo%% <em>"Today is the March 1st"</em></p>
+    <p>%%ʓƨ@lono%% %%ʓıⱴ̄ɟ@löȷiz%% %%ʓɽȷ@loı%% %%ɽʄ@ü%% %%ʓƨ@lono%% %%ƶɟɂʄɽ̃@mihüon%% %%ɀʇ@yë%% %%ʓƨ@lono%% %%ɐ̆ɟɐɟ@sitsi%% %%ɀʇ@yë%% %%ʒʃc@wuto%% %%ʋ̄ȷɔʃ@pızku%% <em>"His birthday is Tuesday, May 14th"</em></p>
   </TabItem>
+</Tabs>
+
+### Saying Years
+
+Years are said like two segments of 2 numbers. For example, 1931 is "19" and
+"31"; 384 is "3" and "84". If the most significant segment is under 10, you can
+use %%xünyu@xünyu%% preceding the final year digit. If you are referring to a
+recent date, you can often just mention the final segment.
+
+<Tabs groupId="popöun-zıkto">
+    <TabItem value="latin" label="Latin" default>
+        <p>%%dus@dus%% %%tiso@tiso%% %%xëti@xëti%% %%dus@dus%% %%xëti@xëti%% <em>1977</em></p>
+        <p>%%son@son%% %%xünyu@xünyu%% %%son@son%% <em>303</em></p>
+    </TabItem>
+    <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
+        <p>%%ʌ́ʃ@dus%% %%cɟɐ@tiso%% %%ɋʇcɟ@xëti%% %%ʌ́ʃ@dus%% %%ɋʇcɟ@xëti%% <em>1977</em></p>
+        <p>%%ɐ̃@son%% %%ɋ̃ʄɀʃ@xünyu%% %%ɐ̃@son%% <em>303</em></p>
+    </TabItem>
+</Tabs>
+      
+To say dates in "BC" or "BCE", use the phrase %%yë@yë%% %%ılık@ılık%% %%ȷıȷıme@ȷıȷıme%% %%sodolun@sodolun%%.
+
+<Tabs groupId="popöun-zıkto">
+    <TabItem value="latin" label="Latin" default>
+        %%köson@köson%% %%kut@kut%% %%zö@zö%% %%sınsi@sınsi%% Lömo %%hoi@hoi%% %%xëti@xëti%% %%pızku@pızku%% %%dus@dus%% %%son@son%%
+    </TabItem>
+    <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
+        %%ɔıɐ̃@köson%% %%ɔ̆ʃ@kut%% %%ꞇı@zö%% %%ɐ̃ȷɐɟ@sınsi%% ‹ʓıƶ› %%ɂɽɟ@hoi%% %%ɋʇcɟ@xëti%% %%ʋ̄ȷɔʃ@pızku%% %%ʌ́ʃ@dus%% %%ɐ̃@son%%
+    </TabItem>
 </Tabs>
 
 ## Talk The Clock
