fix for missed tags that needed updating

--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -15,7 +15,7 @@ quantifiers and modifiers.
 
 ### Causer / Voluntary Subject
 
-The %%ü|ü%% particle precedes this noun phrase.
+The %%ü@ü%% particle precedes this noun phrase.
 
 During causative sentences, a NP with this role represents the *causer*.
 Otherwise, an NP with this role will be the agent or experiencer of the action.
@@ -24,7 +24,7 @@ the act of their own free will.
 
 ### Causee / Involuntary Subject
 
-The %%ölë|ölë%% particle precedes this noun phrase.
+The %%ölë@ölë%% particle precedes this noun phrase.
 
 During causative sentences, a NP with this role will represent the *causee*.
 Otherwise, an NP with this role will be the agent or experiencer of the action.
@@ -35,7 +35,7 @@ are acting out of some basic instinst.
 
 ### Patient, Theme, Stimulus (Direct Object)
 
-The %%zö|zö%% particle precedes this noun phrase.
+The %%zö@zö%% particle precedes this noun phrase.
 
 This role is used for transitive verbs that have an additional argument. The
 argument represents a patient (an entity that undergoes the action and changes
@@ -46,7 +46,7 @@ times there is no preceding particle for this argument.
 
 ### Instrument or Manner
 
-The %%vio|vio%% particle precedes this noun phrase.
+The %%vio@vio%% particle precedes this noun phrase.
 
 This role is used for NPs that represent some entity that was used to carry out
 the action. It can also represent the way or manner with which the action was
@@ -55,14 +55,14 @@ carried out. In English, this represents some of the senses of the words "with",
 
 ### Location or Time
 
-The %%hoi|hoi%% particle precedes this noun phrase.
+The %%hoi@hoi%% particle precedes this noun phrase.
 
 This role is used for NPs that represent where or when the action occurs. In
 English, this represents some of the senses of the words "in", "at", and "on".
 
 ### Direction or Destination (Indirect Object)
 
-The %%müt|müt%% particle precedes this noun phrase.
+The %%müt@müt%% particle precedes this noun phrase.
 
 This role is used for NPs that represent where the action is directed towards.
 In English, this represents some of the senses of the words "to", "into", and
@@ -70,14 +70,14 @@ In English, this represents some of the senses of the words "to", "into", and
 
 ### Source or Origin
 
-The %%sün|sün%% particle precedes this noun phrase.
+The %%sün@sün%% particle precedes this noun phrase.
 
 This role is used for NPs that represent where the action originated. In
 English, this represents some of the senses of the word "from".
 
 ### Beneficiary or Purpose
 
-The %%oxon|oxon%% particle precedes this noun phrase.
+The %%oxon@oxon%% particle precedes this noun phrase.
 
 This role is used for NPs that represent for whose benefit the action occurs or
 the reason for the action. In English, this represents some of the senses of the
@@ -85,7 +85,7 @@ word "for".
 
 ### Cause
 
-The %%nënko|nënko%% particle precedes this noun phrase.
+The %%nënko@nënko%% particle precedes this noun phrase.
 
 This role is used for NPs that represent what caused the action to occur or a
 past reason that led to the action. In English, this represents some of the
@@ -93,7 +93,7 @@ senses of the word "because".
 
 ### Collaborator
 
-The %%ovek|ovek%% particle precedes this noun phrase.
+The %%ovek@ovek%% particle precedes this noun phrase.
 
 This role is used for NPs that represent a fellow actor that is also engaged in
 the same action as the subject. However, the NP is not considered a subject of
@@ -102,7 +102,7 @@ the sentence. In English, this represents some of the senses of the word
 
 ### Context or Condition
 
-The %%win|win%% particle precedes this noun phrase.
+The %%win@win%% particle precedes this noun phrase.
 
 This role is used for NPs that represent an overarching topic, contextual
 detail, or a condition for the underlying sentence. In English, this represents
@@ -110,7 +110,7 @@ some of the senses of the words "regarding", "given", "as for", and "when".
 
 ### Recipient or Counter-Agent
 
-The %%dën|dën%% particle precedes this noun phrase.
+The %%dën@dën%% particle precedes this noun phrase.
 
 This role is used for NPs that either represent a special kind of goal/agent for
 verbs that indicates an opposing agent for verbs that indicate an action that is
@@ -119,7 +119,7 @@ English, this represents some of the senses of the word "against".
 
 ### Evidence
 
-The %%üz|üz%% particle precedes this noun phrase.
+The %%üz@üz%% particle precedes this noun phrase.
 
 This role is used for NPs that represent proof or an information source that the
 specified action is known or believed to have occurred, is occurring, or will
@@ -127,7 +127,7 @@ occur. In English, this represents some of the senses of the phrase "or so".
 
 ### Distance or Duration
 
-The %%lon|lon%% particle precedes this noun phrase.
+The %%lon@lon%% particle precedes this noun phrase.
 
 This role is used for NPs that represent the time or space that the action
 occurs within. This role is related to the location/time role but it represents
@@ -136,7 +136,7 @@ of the senses of the word "for".
 
 ### Intermediate
 
-The %%gıtno|gıtno%% particle precedes this noun phrase.
+The %%gıtno@gıtno%% particle precedes this noun phrase.
 
 This role is used for either a NP that represents the a time or physical entity
 that the action occurs between or a conjunction of two NPs that represent two
@@ -145,7 +145,7 @@ represents some of the senses of the word "between".
 
 ### Genitive
 
-The %%yë|yë%% particle precedes this noun phrase.
+The %%yë@yë%% particle precedes this noun phrase.
 
 This role is used for a NP that is describing the preceding noun or verb phrase
 in some contextually dependent manner. In English, this represents some of the
@@ -174,15 +174,15 @@ phrase.
 
 <Tabs groupId="popöun-zıkto">
   <TabItem value="latin" label="Latin" default>
-    %%pön|pön%% %%ü|ü%% %%wölık|wölık%% %%zö|zö%% %%küyö|küyö%%
+    %%pön@pön%% %%ü@ü%% %%wölık@wölık%% %%zö@zö%% %%küyö@küyö%%
   </TabItem>
   <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
-    %%ʋ̃ı|pön%% %%ɽʄ|ü%% %%ʒıʓ̑ȷ|wölık%% %%ꞇı|zö%% %%ɔʄɀı|küyö%%
+    %%ʋ̃ı@pön%% %%ɽʄ@ü%% %%ʒıʓ̑ȷ@wölık%% %%ꞇı@zö%% %%ɔʄɀı@küyö%%
   </TabItem>
 </Tabs>
 
 Another way is to create a genitive phrase by preceding the modifier with the
-%%yë|yë%% particle. This particle means that whatever word type that the word
+%%yë@yë%% particle. This particle means that whatever word type that the word
 immediately following it is, take the noun derivation of that word type.
 
 This is especially useful for the typical reason that genitive phrases are
@@ -190,10 +190,10 @@ useful: it allows you to describe a quality with some modifiers of its own.
 
 <Tabs groupId="popöun-zıkto">
   <TabItem value="latin" label="Latin" default>
-    %%töxüzı|töxüzı%% %%pümi|pümi%% %%yë|yë%% %%ıwotë|ıwotë%% %%ëto|ëto%%
+    %%töxüzı@töxüzı%% %%pümi@pümi%% %%yë@yë%% %%ıwotë@ıwotë%% %%ëto@ëto%%
   </TabItem>
   <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
-    %%cıɋʄꞇȷ|töxüzı%% %%ʋʄƶɟ|pümi%% %%ɀʇ|yë%% %%ɽȷʒcʇ|ıwotë%% %%ɽʇc|ëto%%
+    %%cıɋʄꞇȷ@töxüzı%% %%ʋʄƶɟ@pümi%% %%ɀʇ@yë%% %%ɽȷʒcʇ@ıwotë%% %%ɽʇc@ëto%%
   </TabItem>
 </Tabs>
 
