Add some more date examples

--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -187,7 +187,16 @@ as a condition in a %%win@win%% prepositional phrase:
   </TabItem>
 </Tabs>
 
+Asking what day of the week it is can be done by asking what color of day:
 
+<Tabs groupId="popöun-zıkto">
+    <TabItem value="latin" label="Latin" default>
+        %%longı@longı%% %%ȷık@ȷık%% %%ü@ü%% %%lono@lono%% %%övo@övo%%? <em>What day is today?</em>
+    </TabItem>
+    <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
+        %%ʓ̃ꜿȷ@longı%% %%ⱴ̑ȷ@ȷık%% %%ɽʄ@ü%% %%ʓƨ@lono%% %%ɽıɤ@övo%%? <em>What day is today?</em>
+    </TabItem>
+</Tabs>
 
 ### Months of the Year
 
@@ -282,10 +291,32 @@ To say dates in "BC" or "BCE", use the phrase %%yë@yë%% %%ılık@ılık%% %%ȷ
 
 <Tabs groupId="popöun-zıkto">
     <TabItem value="latin" label="Latin" default>
-        %%köson@köson%% %%kut@kut%% %%zö@zö%% %%sınsi@sınsi%% Lömo %%hoi@hoi%% %%xëti@xëti%% %%pızku@pızku%% %%dus@dus%% %%son@son%%
+        %%köson@köson%% %%kut@kut%% %%zö@zö%% %%sınsi@sınsi%% Lömo %%hoi@hoi%%
+        %%xëti@xëti%% %%pızku@pızku%% %%dus@dus%% %%son@son%% %%yë@yë%%
+        %%ılık@ılık%% %%ȷıȷıme@ȷıȷıme%% %%sodolun@sodolun%%. <em>Rome was built in 753 BCE.</em>
     </TabItem>
     <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
-        %%ɔıɐ̃@köson%% %%ɔ̆ʃ@kut%% %%ꞇı@zö%% %%ɐ̃ȷɐɟ@sınsi%% ‹ʓıƶ› %%ɂɽɟ@hoi%% %%ɋʇcɟ@xëti%% %%ʋ̄ȷɔʃ@pızku%% %%ʌ́ʃ@dus%% %%ɐ̃@son%%
+        %%ɔıɐ̃@köson%% %%ɔ̆ʃ@kut%% %%ꞇı@zö%% %%ɐ̃ȷɐɟ@sınsi%% ‹ʓıƶ› %%ɂɽɟ@hoi%%
+        %%ɋʇcɟ@xëti%% %%ʋ̄ȷɔʃ@pızku%% %%ʌ́ʃ@dus%% %%ɐ̃@son%% %%ɀʇ@yë%%
+        %%ɽȷʓ̑ȷ@ılık%% %%ⱴȷⱴȷƶɿ@ȷıȷıme%% %%ɐʌʓ̃ʃ@sodolun%%: <em>Rome was built in 753 BCE.</em>
+    </TabItem>
+</Tabs>
+
+When you are setting up a date or appointment, often times you want to provide which weekday
+in addition to the date.
+
+<Tabs groupId="popöun-zıkto">
+    <TabItem value="latin" label="Latin" default>
+        %%hoi@hoi%% %%lono@lono%% %%ȷingu@ȷingu%% %%yë@yë%% %%lono@lono%%
+        %%kinsë@kinsë%% %%yë@yë%% %%wuto@wuto%% %%son@son%% %%lı@lı%%
+        %%zok@zok%% %%ü@ü%% %%noyo@noyo%% %%müt@müt%% %%nıwos@nıwos%%.
+        <em>Friday, the 15th of March, I am deparing for home.</em>
+    </TabItem>
+    <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
+        %%ɂɽɟ@hoi%% %%ʓƨ@lono%% %%ⱴ̃ɟꜿʃ@ȷingu%% %%ɀʇ@yë%% %%ʓƨ@lono%%
+        %%ɔ̃ɟɐʇ@kinsë%% %%ɀʇ@yë%% %%ʒʃc@wuto%% %%ɐ̃@son%% %%ʓȷ@lı%% %%ꞇ̑@zok%%
+        %%ɽʄ@ü%% %%ƨɀ@noyo%% %%ƶ̆ʄ@müt%% %%ƨȷʒ́@nıwos%%: <em>Friday, the 15th of
+        March, I am deparing for home.</em>
     </TabItem>
 </Tabs>
 
