--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -118,9 +118,9 @@ refer back to that prior definition including the plurality established.
 
 ## Which Place?
 
-If you supply a cardinal number on the right-hand side of any noun phrase (in
-the modifier position), it indicates which specific value in a list of values,
-also known as the *placement*.
+If you supply a number on the right-hand side of any noun phrase (in the
+modifier position), it indicates which specific value in a list of values, also
+known as the *placement*. These are called **Ordinal Numbers**.
 
 | English    | Hisyëö     | ɂ́ɟɀʇɽı  |
 | :--------- | :--------- | ------- |
