Add a conversation example to date section

--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -310,15 +310,72 @@ in addition to the date.
         %%hoi@hoi%% %%lono@lono%% %%ȷingu@ȷingu%% %%yë@yë%% %%lono@lono%%
         %%kinsë@kinsë%% %%yë@yë%% %%wuto@wuto%% %%son@son%% %%lı@lı%%
         %%zok@zok%% %%ü@ü%% %%noyo@noyo%% %%müt@müt%% %%nıwos@nıwos%%.
-        <em>Friday, the 15th of March, I am deparing for home.</em>
+        <em>Friday, the 15th of March, I am departing for home.</em>
     </TabItem>
     <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
         %%ɂɽɟ@hoi%% %%ʓƨ@lono%% %%ⱴ̃ɟꜿʃ@ȷingu%% %%ɀʇ@yë%% %%ʓƨ@lono%%
         %%ɔ̃ɟɐʇ@kinsë%% %%ɀʇ@yë%% %%ʒʃc@wuto%% %%ɐ̃@son%% %%ʓȷ@lı%% %%ꞇ̑@zok%%
         %%ɽʄ@ü%% %%ƨɀ@noyo%% %%ƶ̆ʄ@müt%% %%ƨȷʒ́@nıwos%%: <em>Friday, the 15th of
-        March, I am deparing for home.</em>
+        March, I am departing for home.</em>
     </TabItem>
 </Tabs>
+
+Each segment of the date is isolated by the %%yë@yë%% genitive particle.
+
+:::info Conversation Practice
+
+<Tabs groupId="popöun-zıkto">
+    <TabItem value="latin" label="Latin" default>
+      <dl>
+        <dt>Malina</dt>
+        <dd>%%noi@noi%% Lovoiyel, %%yünyuü@yünyuü%% %%ü@ü%% %%nimü@nimü%% %%zö@zö%% %%mikdol@mikdol%% %%ȷık@ȷık%% %%yë@yë%% %%sıskın@sıskın%%?</dd>
+        <dd><em>Raphael, how many siblings do you have?</em></dd>
+        <dt>Lovoiyel</dt>
+        <dd>%%yünyuü@yünyuü%% %%ü@ü%% %%%%noyo@noyo%% %%zö@zö%% %%düi@düi%% %%sıskın@sıskın%% %%moskül@moskül%% %%zö@zö%% %%kut@kut%% %%sıskın@sıskın%% %%wohi@wohi%%.</dd>
+        <dd><em>I have two brothers and one sister.</em></dd>
+        <dt>Malina</dt>
+        <dd>%%nokdo@nokdo%% %%ȷık@ȷık%% %%ü@ü%% %%loı@loı%%?</dd>
+        <dd><em>How old are they?</em></dd>
+        <dt>Lovoiyel</dt>
+        <dd>%%önsu@önsu%% %%üsën@üsën%% %%ü@ü%% %%nokdo@nokdo%% %%yë@yë%% %%sıskın@sıskın%% %%wohi@wohi%% %%noyo@noyo%% Somonvo.</dd>
+        <dd><em>My sister Samantha is 11 years old.</em></dd>
+        <dd>%%sitsi@sitsi%% %%üsën@üsën%% %%moliyü@moliyü%% %%düi@düi%% %%dus@dus%% %%kut@kut%% %%üsën@üsën%% %%ü@ü%% %%nokdo@nokdo%% %%yë@yë%% %%sıskın@sıskın%% %%%%moskül@moskül%%%% %%noyo@noyo%%.</dd>
+        <dd><em>My brother's ages are 14 and 21.</em></dd>
+        <dt>Malina</dt>
+        <dd>%%moliyü@moliyü%% %%lono@lono%% %%ȷık@ȷık%% %%ü@ü%% %%lono@lono%% %%löȷiz@löȷiz%% %%nimü@nimü%%?</dd>
+        <dd><em>And when is your birthday?</em></dd>
+        <dt>Lovoiyel</dt>
+        <dd>%%lono@lono%% %%düi@düi%% %%dus@dus%% %%tiso@tiso%% %%yë@yë%% %%wuto@wuto%% %%toü@toü%%.</dd>
+        <dd><em>June 29th</em></dd>
+      </dl>
+    </TabItem>
+    <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
+      <dl>
+        <dt>Malina</dt>
+        <dd>%%ƨɽɟ@noi%% ‹ʓɤɽɟɀ͊ɿ›, %%ɀ̃ʄɀʃɽʄ@yünyuü%% %%ɽʄ@ü%% %%ƨɟƶʄ@nimü%% %%ꞇı@zö%% %%ƶ̑ɟʌ͊@mikdol%% %%ⱴ̑ȷ@ȷık%% %%ɀʇ@yë%% %%ɐ́ȷɔ̃ȷ@sıskın%%?</dd>
+        <dd><em>Raphael, how many siblings do you have?</em></dd>
+        <dt>Lovoiyel</dt>
+        <dd>%%ɀ̃ʄɀʃɽʄ@yünyuü%% %%ɽʄ@ü%% %%ƨɀ@noyo%% %%ꞇı@zö%% %%ʌʄɽɟ@düi%% %%ɐ́ȷɔ̃ȷ@sıskın%% %%ƶ́ɔ͊ʄ@moskül%% %%ꞇı@zö%% %%ɔ̆ʃ@kut%% %%ɐ́ȷɔ̃ȷ@sıskın%% %%ʒɂɟ@wohi%%.</dd>
+        <dd><em>I have two brothers and one sister.</em></dd>
+        <dt>Malina</dt>
+        <dd>%%ƨ̑ʌ@nokdo%% %%ⱴ̑ȷ@ȷık%% %%ɽʄ@ü%% %%ʓɽȷ@loı%%?</dd>
+        <dd><em>How old are they?</em></dd>
+        <dt>Lovoiyel</dt>
+        <dd>%%ɽ̃ıɐʃ@önsu%% %%ɽʄɐ̃ʇ@üsën%% %%ɽʄ@ü%% %%ƨ̑ʌ@nokdo%% %%ɀʇ@yë%% %%ɐ́ȷɔ̃ȷ@sıskın%% %%ʒɂɟ@wohi%% %%ƨɀ@noyo%% ‹ɐƶ̃ɤ›.</dd>
+        <dd><em>My sister Samantha is 11 years old.</em></dd>
+        <dd>%%ɐ̆ɟɐɟ@sitsi%% %%ɽʄɐ̃ʇ@üsën%% %%ƶʓɟɀʄ@moliyü%% %%ʌʄɽɟ@düi%% %%ʌ́ʃ@dus%% %%ɔ̆ʃ@kut%% %%ɽʄɐ̃ʇ@üsën%% %%ɽʄ@ü%% %%ƨ̑ʌ@nokdo%% %%ɀʇ@yë%% %%ɐ́ȷɔ̃ȷ@sıskın%% %%ƶ́ɔ͊ʄ@moskül%% %%ƨɀ@noyo%%.</dd>
+        <dd><em>My brother's ages are 14 and 21.</em></dd>
+        <dt>Malina</dt>
+        <dd>%%ƶʓɟɀʄ@moliyü%% %%ʓƨ@lono%% %%ⱴ̑ȷ@ȷık%% %%ɽʄ@ü%% %%ʓƨ@lono%% %%ʓıⱴ̄ɟ@löȷiz%% %%ƨɟƶʄ@nimü%%?</dd>
+        <dd><em>And when is your birthday?</em></dd>
+        <dt>Lovoiyel</dt>
+        <dd>%%ʓƨ@lono%% %%ʌʄɽɟ@düi%% %%ʌ́ʃ@dus%% %%cɟɐ@tiso%% %%ɀʇ@yë%% %%ʒʃc@wuto%% %%cɽʄ@toü%%.</dd>
+        <dd><em>June 29th</em></dd>
+      </dl>
+    </TabItem>
+</Tabs>
+
+:::
 
 ## Talk The Clock
 
