fix for changed spelling of "and" word

--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -228,7 +228,7 @@ WIP Translation
 :::
 
 %%zö@zö%% %%son@son%% %%dus@dus%% %%lono@lono%% %%lı@lı%% %%yünyuü@yünyuü%% %%ü@ü%% %%wuto@wuto%% %%tiso@tiso%%,
-%%wuto@wuto%% %%nonkü@nonkü%%, %%wuto@wuto%% %%toü@toü%%, %%moliȷü@moliȷü%% %%wuto@wuto%% %%önsu@önsu%%,
+%%wuto@wuto%% %%nonkü@nonkü%%, %%wuto@wuto%% %%toü@toü%%, %%moliyü@moliyü%% %%wuto@wuto%% %%önsu@önsu%%,
 %%ü@ü%% %%möi@möi%% %%diȷel@diȷel%% %%lı@lı%% %%yünyuü@yünyuü%% %%zö@zö%% %%son@son%% %%dus@dus%% %%kut@kut%%,
 %%ü@ü%% %%yök@yök%% %%wuto@wuto%% %%düi@düi%% %%do@do%% %%hoi@hoi%% %%düi@düi%% %%dus@dus%% %%tukwos@tukwos%% %%lono@lono%%,
 %%lëkın@lëkın%% %%ü@ü%% %%üsën@üsën%% %%ȷoston@ȷoston%% %%hoi@hoi%% %%xokön@xokön%% %%nonkü@nonkü%%,
