--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -108,7 +108,7 @@ This role is used for NPs that represent an overarching topic, contextual
 detail, or a condition for the underlying sentence. In English, this represents
 some of the senses of the words "regarding", "given", "as for", and "when".
 
-### Recipient or Counter-Agent
+### Counter-Agent
 
 The %%dën@dën%% particle precedes this noun phrase.
 
@@ -157,7 +157,7 @@ Converting from the other content types into nouns.
 
 ### Verbs
 
-When a verb acts as a noun, it represents a archetypal object that has been or
+When a verb acts as a noun, it represents an archetypal object that has been or
 hasn't yet been involved in the happening of that verb action. Like "-able" in
 English but also there are many terms that English has to refer to these
 entities already. These are direct objects, patients and themes that would be
@@ -168,9 +168,8 @@ logical to use in a sentence where you use that verb.
 When a modifier acts as a noun, it means an uncountable quality and/or degree of
 being a given state. Like the affix "-ness" in English. One way of making a noun
 out of a modifier is to provide it as the nucleus of a preposition phrase.
-Preposition particles always have whatever word is immediately following it is,
-take the noun derivation of that word and that is the nucleus of the preposition
-phrase.
+Preposition particles always take the word is immediately following it as a noun
+derivation of that word and it is the nucleus of the preposition phrase.
 
 <Tabs groupId="popöun-zıkto">
   <TabItem value="latin" label="Latin" default>
