Some tweaks to the phonology and supported word changes

--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -70,14 +70,14 @@ that you'll need to count all the way up to a trillion.
 | 100       | viyën                                                              | ɤɟɀ̃ʇ                                                       |
 | 101       | viyën kut                                                          | ɤɟɀ̃ʇ ɔ̆ʃ                                                    |
 | 234       | düi viyën son dus nonkü                                            | ʌʄɽɟ ɤɟɀ̃ʇ ɐ̃ ʌ́ʃ ƨ̃ɔʄ                                         |
-| 1000      | zën kut                                                            | ꞇ̃ʇ ɔ̆ʃ                                                     |
-| 1,000,000 | zën düi                                                            | ꞇ̃ʇ ʌʄɽɟ                                                   |
-| 1,999     | zën kut,tiso viyën tiso dus tiso                                   | ꞇ̃ʇ ɔ̆ʃ､cɟɐ ɤɟɀ̃ʇ cɟɐ ʌ́ʃ cɟɐ                                 |
-| 1,234,567 | zën düi, düi viyën son dus nonkü zën kut, pızku viyën toü dus xëti | ꞇ̃ʇ ʌʄɽɟ､ ʌʄɽɟ ɤɟɀ̃ʇ ɐ̃ ʌ́ʃ ƨ̃ɔʄ ꞇ̃ʇ ɔ̆ʃ､ ʋ̄ȷɔʃ ɤɟɀ̃ʇ cɽʄ ʌ́ʃ ɋʇcɟ |
+| 1000      | zın kut                                                            | ꞇ̃ʇ ɔ̆ʃ                                                     |
+| 1,000,000 | zın düi                                                            | ꞇ̃ʇ ʌʄɽɟ                                                   |
+| 1,999     | zın kut,tiso viyën tiso dus tiso                                   | ꞇ̃ʇ ɔ̆ʃ､cɟɐ ɤɟɀ̃ʇ cɟɐ ʌ́ʃ cɟɐ                                 |
+| 1,234,567 | zın düi, düi viyën son dus nonkü zın kut, pızku viyën toü dus xëti | ꞇ̃ʇ ʌʄɽɟ､ ʌʄɽɟ ɤɟɀ̃ʇ ɐ̃ ʌ́ʃ ƨ̃ɔʄ ꞇ̃ʇ ɔ̆ʃ､ ʋ̄ȷɔʃ ɤɟɀ̃ʇ cɽʄ ʌ́ʃ ɋʇcɟ |
 
 ## Tens, Thousands, Millions
 
-As you can see above, you use the %%zën@zën%% with the number directly following
+As you can see above, you use the %%zın@zın%% with the number directly following
 it representing how many groups of 3 places. This is the same amount as we put
 commas or periods in our number representations.
 
@@ -227,12 +227,12 @@ WIP Translation
 
 :::
 
-%%zö@zö%% %%son@son%% %%dus@dus%% %%lono@lono%% %%lı@lı%% %%yünyuü@yünyuü%% %%ü@ü%% %%wuto@wuto%% %%tiso@tiso%%,
+%%zö@zö%% %%son@son%% %%dus@dus%% %%lono@lono%% %%lı@lı%% %%yünyoü@yünyoü%% %%ü@ü%% %%wuto@wuto%% %%tiso@tiso%%,
 %%wuto@wuto%% %%nonkü@nonkü%%, %%wuto@wuto%% %%toü@toü%%, %%moliyü@moliyü%% %%wuto@wuto%% %%önsu@önsu%%,
-%%ü@ü%% %%möi@möi%% %%diȷel@diȷel%% %%lı@lı%% %%yünyuü@yünyuü%% %%zö@zö%% %%son@son%% %%dus@dus%% %%kut@kut%%,
+%%ü@ü%% %%möi@möi%% %%diȷel@diȷel%% %%lı@lı%% %%yünyoü@yünyoü%% %%zö@zö%% %%son@son%% %%dus@dus%% %%kut@kut%%,
 %%ü@ü%% %%yök@yök%% %%wuto@wuto%% %%düi@düi%% %%do@do%% %%hoi@hoi%% %%düi@düi%% %%dus@dus%% %%tukwos@tukwos%% %%lono@lono%%,
 %%lëkın@lëkın%% %%ü@ü%% %%üsën@üsën%% %%ȷoston@ȷoston%% %%hoi@hoi%% %%xokön@xokön%% %%nonkü@nonkü%%,
-%%zö@zö%% %%eswen@eswen%% %%kut@kut%% %%lono@lono%% %%lı@lı%% %%yünyuü@yünyuü%%
+%%zö@zö%% %%eswen@eswen%% %%kut@kut%% %%lono@lono%% %%lı@lı%% %%yünyoü@yünyoü%%
 
 [Wikipedia](https://en.wikipedia.org/wiki/Thirty_Days_Hath_September)
 
@@ -328,10 +328,10 @@ Each segment of the date is isolated by the %%yë@yë%% genitive particle.
     <TabItem value="latin" label="Latin" default>
       <dl>
         <dt>Malina</dt>
-        <dd>%%noi@noi%% Lovoiyel, %%yünyuü@yünyuü%% %%ü@ü%% %%nimü@nimü%% %%zö@zö%% %%mikdol@mikdol%% %%ȷık@ȷık%% %%yë@yë%% %%sıskın@sıskın%%?</dd>
+        <dd>%%noi@noi%% Lovoiyel, %%yünyoü@yünyoü%% %%ü@ü%% %%nimü@nimü%% %%zö@zö%% %%mikdol@mikdol%% %%ȷık@ȷık%% %%yë@yë%% %%sıskın@sıskın%%?</dd>
         <dd><em>Raphael, how many siblings do you have?</em></dd>
         <dt>Lovoiyel</dt>
-        <dd>%%yünyuü@yünyuü%% %%ü@ü%% %%%%noyo@noyo%% %%zö@zö%% %%düi@düi%% %%sıskın@sıskın%% %%moskül@moskül%% %%zö@zö%% %%kut@kut%% %%sıskın@sıskın%% %%wohi@wohi%%.</dd>
+        <dd>%%yünyoü@yünyoü%% %%ü@ü%% %%%%noyo@noyo%% %%zö@zö%% %%düi@düi%% %%sıskın@sıskın%% %%moskül@moskül%% %%zö@zö%% %%kut@kut%% %%sıskın@sıskın%% %%wohi@wohi%%.</dd>
         <dd><em>I have two brothers and one sister.</em></dd>
         <dt>Malina</dt>
         <dd>%%nokdo@nokdo%% %%ȷık@ȷık%% %%ü@ü%% %%loı@loı%%?</dd>
@@ -352,10 +352,10 @@ Each segment of the date is isolated by the %%yë@yë%% genitive particle.
     <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
       <dl>
         <dt>Malina</dt>
-        <dd>%%ƨɽɟ@noi%% ‹ʓɤɽɟɀ͊ɿ›, %%ɀ̃ʄɀʃɽʄ@yünyuü%% %%ɽʄ@ü%% %%ƨɟƶʄ@nimü%% %%ꞇı@zö%% %%ƶ̑ɟʌ͊@mikdol%% %%ⱴ̑ȷ@ȷık%% %%ɀʇ@yë%% %%ɐ́ȷɔ̃ȷ@sıskın%%?</dd>
+        <dd>%%ƨɽɟ@noi%% ‹ʓɤɽɟɀ͊ɿ›, %%ɀ̃ʄɀʃɽʄ@yünyoü%% %%ɽʄ@ü%% %%ƨɟƶʄ@nimü%% %%ꞇı@zö%% %%ƶ̑ɟʌ͊@mikdol%% %%ⱴ̑ȷ@ȷık%% %%ɀʇ@yë%% %%ɐ́ȷɔ̃ȷ@sıskın%%?</dd>
         <dd><em>Raphael, how many siblings do you have?</em></dd>
         <dt>Lovoiyel</dt>
-        <dd>%%ɀ̃ʄɀʃɽʄ@yünyuü%% %%ɽʄ@ü%% %%ƨɀ@noyo%% %%ꞇı@zö%% %%ʌʄɽɟ@düi%% %%ɐ́ȷɔ̃ȷ@sıskın%% %%ƶ́ɔ͊ʄ@moskül%% %%ꞇı@zö%% %%ɔ̆ʃ@kut%% %%ɐ́ȷɔ̃ȷ@sıskın%% %%ʒɂɟ@wohi%%.</dd>
+        <dd>%%ɀ̃ʄɀʃɽʄ@yünyoü%% %%ɽʄ@ü%% %%ƨɀ@noyo%% %%ꞇı@zö%% %%ʌʄɽɟ@düi%% %%ɐ́ȷɔ̃ȷ@sıskın%% %%ƶ́ɔ͊ʄ@moskül%% %%ꞇı@zö%% %%ɔ̆ʃ@kut%% %%ɐ́ȷɔ̃ȷ@sıskın%% %%ʒɂɟ@wohi%%.</dd>
         <dd><em>I have two brothers and one sister.</em></dd>
         <dt>Malina</dt>
         <dd>%%ƨ̑ʌ@nokdo%% %%ⱴ̑ȷ@ȷık%% %%ɽʄ@ü%% %%ʓɽȷ@loı%%?</dd>
