--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -19,61 +19,127 @@ To express your internet usage or uber cost, we need quantifiers that will tell
 us exactly how many of something we have. The table below provides the numbers
 that you'll need to count all the way up to a trillion.
 
-| Number    | Hisyëö                                                             | ɂ́ɟɀʇɽı                                                     |
-| :-------- | :----------------------------------------------------------------- | ---------------------------------------------------------- |
-| 0         | xünyu                                                              | ɋ̃ʄɀʃ                                                       |
-| 1         | kut                                                                | ɔ̆ʃ                                                         |
-| 2         | düi                                                                | ʌʄɽɟ                                                       |
-| 3         | son                                                                | ɐ̃                                                          |
-| 4         | nonkü                                                              | ƨ̃ɔʄ                                                        |
-| 5         | pızku                                                              | ʋ̄ȷɔʃ                                                       |
-| 6         | toü                                                                | cɽʄ                                                        |
-| 7         | xëti                                                               | ɋʇcɟ                                                       |
-| 8         | tukwos                                                             | c̑ʃʒ́                                                        |
-| 9         | tiso                                                               | cɟɐ                                                        |
-| 10        | dus                                                                | ʌ́ʃ                                                         |
-| 11        | onsü                                                               | ɽ̃ɐʄ                                                        |
-| 12        | pole                                                               | ʋʓɿ                                                        |
-| 13        | telö                                                               | cɿʓı                                                       |
-| 14        | sitsi                                                              | ɐ̆ɟɐɟ                                                       |
-| 15        | kinsë                                                              | ɔ̃ɟɐʇ                                                       |
-| 16        | ses                                                                | ɐ́ɿ                                                         |
-| 17        | dus xëti                                                           | ʌ́ʃ ɋʇcɟ                                                    |
-| 18        | dus tukwos                                                         | ʌ́ʃ c̑ʃʒ́                                                     |
-| 19        | dus tiso                                                           | ʌ́ʃ cɟɐ                                                     |
-| 20        | düi dus                                                            | ʌʄɽɟ ʌ́ʃ                                                    |
-| 21        | düi dus kut                                                        | ʌʄɽɟ ʌ́ʃ ɔ̆ʃ                                                 |
-| 22        | düi dus düi                                                        |                                                            |
-| 23        | düi dus son                                                        | ʌʄɽɟ ʌ́ʃ ɐ̃                                                  |
-| 24        | düi dus nonkü                                                      | ʌʄɽɟ ʌ́ʃ ƨ̃ɔʄ                                                |
-| 25        | düi dus pızku                                                      | ʌʄɽɟ ʌ́ʃ ʋ̄ȷɔʃ                                               |
-| 26        | düi dus toü                                                        | ʌʄɽɟ ʌ́ʃ cɽʄ                                                |
-| 27        | düi dus xëti                                                       | ʌʄɽɟ ʌ́ʃ ɋʇcɟ                                               |
-| 28        | düi dus tukwos                                                     | ʌʄɽɟ ʌ́ʃ c̑ʃʒ́                                                |
-| 29        | düi dus tiso                                                       | ʌʄɽɟ ʌ́ʃ cɟɐ                                                |
-| 30        | son dus                                                            | ɐ̃ ʌ́ʃ                                                       |
-| 31        | son dus kut                                                        | ɐ̃ ʌ́ʃ ɔ̆ʃ                                                    |
-| 32        | son dus düi                                                        | ɐ̃ ʌ́ʃ ʌʄɽɟ                                                  |
-| 33        | son dus son                                                        | ɐ̃ ʌ́ʃ ɐ̃                                                     |
-| 34        | son dus nonkü                                                      | ɐ̃ ʌ́ʃ ƨ̃ɔʄ                                                   |
-| 35        | son dus pızku                                                      | ɐ̃ ʌ́ʃ ʋ̄ȷɔʃ                                                  |
-| 36        | son dus toü                                                        | ɐ̃ ʌ́ʃ cɽʄ                                                   |
-| 37        | son dus xëti                                                       | ɐ̃ ʌ́ʃ ɋʇcɟ                                                  |
-| 38        | son dus tukwos                                                     | ɐ̃ ʌ́ʃ c̑ʃʒ́                                                   |
-| 39        | son dus tiso                                                       | ɐ̃ ʌ́ʃ cɟɐ                                                   |
-| 40        | nonkü dus                                                          | ƨ̃ɔʄ ʌ́ʃ                                                     |
-| 50        | pızku dus                                                          | ʋ̄ȷɔʃ ʌ́ʃ                                                    |
-| 60        | toü dus                                                            | cɽʄ ʌ́ʃ                                                     |
-| 70        | xëti dus                                                           | ɋʇcɟ ʌ́ʃ                                                    |
-| 80        | tukwos dus                                                         | c̑ʃʒ́ ʌ́ʃ                                                     |
-| 90        | tiso dus                                                           | cɟɐ ʌ́ʃ                                                     |
-| 100       | viyën                                                              | ɤɟɀ̃ʇ                                                       |
-| 101       | viyën kut                                                          | ɤɟɀ̃ʇ ɔ̆ʃ                                                    |
-| 234       | düi viyën son dus nonkü                                            | ʌʄɽɟ ɤɟɀ̃ʇ ɐ̃ ʌ́ʃ ƨ̃ɔʄ                                         |
-| 1000      | zın kut                                                            | ꞇ̃ʇ ɔ̆ʃ                                                     |
-| 1,000,000 | zın düi                                                            | ꞇ̃ʇ ʌʄɽɟ                                                   |
-| 1,999     | zın kut,tiso viyën tiso dus tiso                                   | ꞇ̃ʇ ɔ̆ʃ､cɟɐ ɤɟɀ̃ʇ cɟɐ ʌ́ʃ cɟɐ                                 |
-| 1,234,567 | zın düi, düi viyën son dus nonkü zın kut, pızku viyën toü dus xëti | ꞇ̃ʇ ʌʄɽɟ､ ʌʄɽɟ ɤɟɀ̃ʇ ɐ̃ ʌ́ʃ ƨ̃ɔʄ ꞇ̃ʇ ɔ̆ʃ､ ʋ̄ȷɔʃ ɤɟɀ̃ʇ cɽʄ ʌ́ʃ ɋʇcɟ |
+<Tabs groupId="popöun-zıkto">
+  <TabItem value="latin" label="Latin" default>
+    <table>
+        <tr><td><strong>Number</strong></td><td><strong>Hisyëö</strong></td></tr>
+        <tr><td>0</td><td>%%xünyu@xünyu%%</td></tr>
+        <tr><td>1</td><td>%%kut@kut%%</td></tr>
+        <tr><td>2</td><td>%%düi@düi%%</td></tr>
+        <tr><td>3</td><td>%%son@son%%</td></tr>
+        <tr><td>4</td><td>%%nonkü@nonkü%%</td></tr>
+        <tr><td>5</td><td>%%tiü@tiü%%</td></tr>
+        <tr><td>6</td><td>%%toü@toü%%</td></tr>
+        <tr><td>7</td><td>%%xëti@xëti%%</td></tr>
+        <tr><td>8</td><td>%%tukwos@tukwos%%</td></tr>
+        <tr><td>9</td><td>%%tiso@tiso%%</td></tr>
+        <tr><td>10</td><td>%%dus@dus%%</td></tr>
+        <tr><td>11</td><td>%%önsu@önsu%%</td></tr>
+        <tr><td>12</td><td>%%pole@pole%%</td></tr>
+        <tr><td>13</td><td>%%telö@telö%%</td></tr>
+        <tr><td>14</td><td>%%zıyön@zıyön%%</td></tr>
+        <tr><td>15</td><td>%%kinsë@kinsë%%</td></tr>
+        <tr><td>16</td><td>%%ses@ses%%</td></tr>
+        <tr><td>17</td><td>%%dus@dus%% %%xëti@xëti%%</td></tr>
+        <tr><td>18</td><td>%%dus@dus%% %%tukwos@tukwos%%</td></tr>
+        <tr><td>19</td><td>%%dus@dus%% %%tiso@tiso%%</td></tr>
+        <tr><td>20</td><td>%%düi@düi%% %%dus@dus%%</td></tr>
+        <tr><td>21</td><td>%%düi@düi%% %%dus@dus%% %%kut@kut%%</td></tr>
+        <tr><td>22</td><td>%%düi@düi%% %%dus@dus%% %%düi@düi%%</td></tr>
+        <tr><td>23</td><td>%%düi@düi%% %%dus@dus%% %%son@son%%</td></tr>
+        <tr><td>24</td><td>%%düi@düi%% %%dus@dus%% %%nonkü@nonkü%%</td></tr>
+        <tr><td>25</td><td>%%düi@düi%% %%dus@dus%% %%tiü@tiü%%</td></tr>
+        <tr><td>26</td><td>%%düi@düi%% %%dus@dus%% %%toü@toü%%</td></tr>
+        <tr><td>27</td><td>%%düi@düi%% %%dus@dus%% %%xëti@xëti%%</td></tr>
+        <tr><td>28</td><td>%%düi@düi%% %%dus@dus%% %%tukwos@tukwos%%</td></tr>
+        <tr><td>29</td><td>%%düi@düi%% %%dus@dus%% %%tiso@tiso%%</td></tr>
+        <tr><td>30</td><td>%%son@son%% %%dus@dus%%</td></tr>
+        <tr><td>31</td><td>%%son@son%% %%dus@dus%% %%kut@kut%%</td></tr>
+        <tr><td>32</td><td>%%son@son%% %%dus@dus%% %%düi@düi%%</td></tr>
+        <tr><td>33</td><td>%%son@son%% %%dus@dus%% %%son@son%%</td></tr>
+        <tr><td>34</td><td>%%son@son%% %%dus@dus%% %%nonkü@nonkü%%</td></tr>
+        <tr><td>35</td><td>%%son@son%% %%dus@dus%% %%tiü@tiü%%</td></tr>
+        <tr><td>36</td><td>%%son@son%% %%dus@dus%% %%toü@toü%%</td></tr>
+        <tr><td>37</td><td>%%son@son%% %%dus@dus%% %%xëti@xëti%%</td></tr>
+        <tr><td>38</td><td>%%son@son%% %%dus@dus%% %%tukwos@tukwos%%</td></tr>
+        <tr><td>39</td><td>%%son@son%% %%dus@dus%% %%tiso@tiso%%</td></tr>
+        <tr><td>40</td><td>%%nonkü@nonkü%% %%dus@dus%%</td></tr>
+        <tr><td>50</td><td>%%tiü@tiü%% %%dus@dus%%</td></tr>
+        <tr><td>60</td><td>%%toü@toü%% %%dus@dus%%</td></tr>
+        <tr><td>70</td><td>%%xëti@xëti%% %%dus@dus%%</td></tr>
+        <tr><td>80</td><td>%%tukwos@tukwos%% %%dus@dus%%</td></tr>
+        <tr><td>90</td><td>%%tiso@tiso%% %%dus@dus%%</td></tr>
+        <tr><td>100</td><td>%%viyën@viyën%%</td></tr>
+        <tr><td>101</td><td>%%viyën@viyën%% %%kut@kut%%</td></tr>
+        <tr><td>234</td><td>%%düi@düi%% %%viyën@viyën%% %%son@son%% %%dus@dus%% %%nonkü@nonkü%%</td></tr>
+        <tr><td>1000</td><td>%%cın@cın%% %%kut@kut%%</td></tr>
+        <tr><td>1,000,000</td><td>%%cın@cın%% %%düi@düi%%</td></tr>
+        <tr><td>1,999</td><td>%%cın@cın%% %%kut@kut%%,%%tiso@tiso%% %%viyën@viyën%% %%tiso@tiso%% %%dus@dus%% %%tiso@tiso%%</td></tr>
+        <tr><td>1,234,567</td><td>%%cın@cın%% %%düi@düi%%, %%düi@düi%% %%viyën@viyën%% %%son@son%% %%dus@dus%% %%nonkü@nonkü%% %%cın@cın%% %%kut@kut%%, %%tiü@tiü%% %%viyën@viyën%% %%toü@toü%% %%dus@dus%% %%xëti@xëti%%</td></tr>
+    </table>
+  </TabItem>
+  <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
+    <table>
+        <tr>
+            <td><strong>Number</strong></td>
+            <td><strong>ɂ́ɟɀʇɽı</strong></td>
+        </tr>
+        <tr><td>0</td><td>ɋ̃ʄɀʃ</td></tr>
+        <tr><td>1</td><td>ɔ̆ʃ</td></tr>
+        <tr><td>2</td><td>ʌʄɽɟ</td></tr>
+        <tr><td>3</td><td>ɐ̃</td></tr>
+        <tr><td>4</td><td>ƨ̃ɔʄ</td></tr>
+        <tr><td>5</td><td>ʋ̄ȷɔʃ</td></tr>
+        <tr><td>6</td><td>cɽʄ</td></tr>
+        <tr><td>7</td><td>ɋʇcɟ</td></tr>
+        <tr><td>8</td><td>c̑ʃʒ́</td></tr>
+        <tr><td>9</td><td>cɟɐ</td></tr>
+        <tr><td>10</td><td>ʌ́ʃ</td></tr>
+        <tr><td>11</td><td>ɽ̃ɐʄ</td></tr>
+        <tr><td>12</td><td>ʋʓɿ</td></tr>
+        <tr><td>13</td><td>cɿʓı</td></tr>
+        <tr><td>14</td><td>ɐ̆ɟɐɟ</td></tr>
+        <tr><td>15</td><td>ɔ̃ɟɐʇ</td></tr>
+        <tr><td>16</td><td>ɐ́ɿ</td></tr>
+        <tr><td>17</td><td>ʌ́ʃ ɋʇcɟ</td></tr>
+        <tr><td>18</td><td>ʌ́ʃ c̑ʃʒ́</td></tr>
+        <tr><td>19</td><td>ʌ́ʃ cɟɐ</td></tr>
+        <tr><td>20</td><td>ʌʄɽɟ ʌ́ʃ</td></tr>
+        <tr><td>21</td><td>ʌʄɽɟ ʌ́ʃ ɔ̆ʃ</td></tr>
+        <tr><td>22</td><td></td></tr>
+        <tr><td>23</td><td>ʌʄɽɟ ʌ́ʃ ɐ̃</td></tr>
+        <tr><td>24</td><td>ʌʄɽɟ ʌ́ʃ ƨ̃ɔʄ</td></tr>
+        <tr><td>25</td><td>ʌʄɽɟ ʌ́ʃ ʋ̄ȷɔʃ</td></tr>
+        <tr><td>26</td><td>ʌʄɽɟ ʌ́ʃ cɽʄ</td></tr>
+        <tr><td>27</td><td>ʌʄɽɟ ʌ́ʃ ɋʇcɟ</td></tr>
+        <tr><td>28</td><td>ʌʄɽɟ ʌ́ʃ c̑ʃʒ́</td></tr>
+        <tr><td>29</td><td>ʌʄɽɟ ʌ́ʃ cɟɐ</td></tr>
+        <tr><td>30</td><td>ɐ̃ ʌ́ʃ</td></tr>
+        <tr><td>31</td><td>ɐ̃ ʌ́ʃ ɔ̆ʃ</td></tr>
+        <tr><td>32</td><td>ɐ̃ ʌ́ʃ ʌʄɽɟ</td></tr>
+        <tr><td>33</td><td>ɐ̃ ʌ́ʃ ɐ̃</td></tr>
+        <tr><td>34</td><td>ɐ̃ ʌ́ʃ ƨ̃ɔʄ</td></tr>
+        <tr><td>35</td><td>ɐ̃ ʌ́ʃ ʋ̄ȷɔʃ</td></tr>
+        <tr><td>36</td><td>ɐ̃ ʌ́ʃ cɽʄ</td></tr>
+        <tr><td>37</td><td>ɐ̃ ʌ́ʃ ɋʇcɟ</td></tr>
+        <tr><td>38</td><td>ɐ̃ ʌ́ʃ c̑ʃʒ́</td></tr>
+        <tr><td>39</td><td>ɐ̃ ʌ́ʃ cɟɐ</td></tr>
+        <tr><td>40</td><td>ƨ̃ɔʄ ʌ́ʃ</td></tr>
+        <tr><td>50</td><td>ʋ̄ȷɔʃ ʌ́ʃ</td></tr>
+        <tr><td>60</td><td>cɽʄ ʌ́ʃ</td></tr>
+        <tr><td>70</td><td>ɋʇcɟ ʌ́ʃ</td></tr>
+        <tr><td>80</td><td>c̑ʃʒ́ ʌ́ʃ</td></tr>
+        <tr><td>90</td><td>cɟɐ ʌ́ʃ</td></tr>
+        <tr><td>100</td><td>ɤɟɀ̃ʇ</td></tr>
+        <tr><td>101</td><td>ɤɟɀ̃ʇ ɔ̆ʃ</td></tr>
+        <tr><td>234</td><td>ʌʄɽɟ ɤɟɀ̃ʇ ɐ̃ ʌ́ʃ ƨ̃ɔʄ</td></tr>
+        <tr><td>1000</td><td>ꞇ̃ʇ ɔ̆ʃ</td></tr>
+        <tr><td>1,000,000</td><td>ꞇ̃ʇ ʌʄɽɟ</td></tr>
+        <tr><td>1,999</td><td>ꞇ̃ʇ ɔ̆ʃ､cɟɐ ɤɟɀ̃ʇ cɟɐ ʌ́ʃ cɟɐ</td></tr>
+        <tr><td>1,234,567</td><td>ꞇ̃ʇ ʌʄɽɟ､ ʌʄɽɟ ɤɟɀ̃ʇ ɐ̃ ʌ́ʃ ƨ̃ɔʄ ꞇ̃ʇ ɔ̆ʃ､ ʋ̄ȷɔʃ ɤɟɀ̃ʇ cɽʄ ʌ́ʃ ɋʇcɟ</td></tr>
+    </table>
+  </TabItem>
+</Tabs>
 
 ## Tens, Thousands, Millions
 
