Add more lesson details

--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -445,6 +445,30 @@ Each segment of the date is isolated by the %%yë@yë%% genitive particle.
 
 ## Talk The Clock
 
+If you know how to count to 12, you can talk about hours; if you know how to
+count to 60, then you can talk about minutes and seconds. To ask the time, you
+use the copula with a null subject. The complement uses the interrogative
+pronoun, so there is no need for a sentence ender.
+
+<Tabs groupId="popöun-zıkto">
+    <TabItem value="latin" label="Latin" default>
+        %%woküt@woküt%% %%zık@zık%%
+    </TabItem>
+    <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
+        %%ʒɔ̆ʄ@woküt%% %%ⱴ̑ȷ@zık%%
+    </TabItem>
+</Tabs>
+
+That's a complete sentence because the verb is actually a noun being used as a
+verb which is interpreted as a [zero
+copula](https://en.wikipedia.org/wiki/Zero_copula) sentence. The subject in this
+sentence is not provided, these are called
+[null-subject](https://en.wikipedia.org/wiki/Null-subject_language) sentences.
+Whenever this happens, you have to interpret the subject from either the current
+sentence or from preceding sentences. In some cases, this ends up being "it" or
+"there" in English. In other cases, it ends up being the prior sentence's
+subject. Here, the English backtranslation would be "It is what time?".
+
 ### Durations
 
 ### Exact Times
