add more time info

--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -446,28 +446,54 @@ Each segment of the date is isolated by the %%yë@yë%% genitive particle.
 ## Talk The Clock
 
 If you know how to count to 12, you can talk about hours; if you know how to
-count to 60, then you can talk about minutes and seconds. To ask the time, you
-use the copula with a null subject. The complement uses the interrogative
-pronoun, so there is no need for a sentence ender.
+count to 60, then you can talk about minutes and seconds.
+
+To ask the time, you use the copula with a null subject. The complement uses the
+interrogative pronoun, so there is no need for a sentence ender.
 
 <Tabs groupId="popöun-zıkto">
     <TabItem value="latin" label="Latin" default>
-        %%woküt@woküt%% %%zık@zık%%
+        <p>%%woküt@woküt%% %%zık@zık%% "What time is it?"</p>
+        <p>%%suhot@suhot%% %%zık@zık%% "What hour is it?"</p>
     </TabItem>
     <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
-        %%ʒɔ̆ʄ@woküt%% %%ⱴ̑ȷ@zık%%
+        <p>%%ʒɔ̆ʄ@woküt%% %%ⱴ̑ȷ@zık%% "What time is it?"</p>
+        <p>%%ɐʃɂ̆@suhot%% %%ⱴ̑ȷ@zık%% "What hour is it?"</p>
     </TabItem>
 </Tabs>
 
-That's a complete sentence because the verb is actually a noun being used as a
-verb which is interpreted as a [zero
+That's a complete sentence because the verb is actually a base noun being used
+as a verb which is interpreted as a [zero
 copula](https://en.wikipedia.org/wiki/Zero_copula) sentence. The subject in this
 sentence is not provided, these are called
 [null-subject](https://en.wikipedia.org/wiki/Null-subject_language) sentences.
 Whenever this happens, you have to interpret the subject from either the current
 sentence or from preceding sentences. In some cases, this ends up being "it" or
 "there" in English. In other cases, it ends up being the prior sentence's
-subject. Here, the English backtranslation would be "It is what time?".
+subject. Here's some examples of how to respond to these questions:
+
+<Tabs groupId="popöun-zıkto">
+    <TabItem value="latin" label="Latin" default>
+        <p>%%kut@kut%% "It is one"</p>
+        <p>%%suhot@suhot%% %%kut@kut%% "It is one o'clock"</p>
+        <p>%%suhot@suhot%% %%dus@dus%% "It is ten o'clock"</p>
+        <p>%%suhot@suhot%% %%pole@pole%% "It is twelve o'clock"</p>
+        <p>%%lono@lono%% %%mutyu@mutyu%% "It is noon"</p>
+        <p>%%pıtün@pıtün%% %%mutyu@mutyu%% "It is midnight"</p>
+    </TabItem>
+    <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
+        <p>%%ɔ̆ʃ@kut%% "It is one"</p>
+        <p>%%ɐʃɂ̆@suhot%% %%ɔ̆ʃ@kut%% "It is one o'clock"</p>
+        <p>%%ɐʃɂ̆@suhot%% %%ʌ́ʃ@dus%% "It is ten o'clock"</p>
+        <p>%%ɐʃɂ̆@suhot%% %%ʋʓɿ@pole%% "It is twelve o'clock"</p>
+        <p>%%ʓƨ@lono%% %%ƶ̆ʃɀʃ@mutyu%% "It is noon"</p>
+        <p>%%ʋȷc̃ʄ@pıtün%% %%ƶ̆ʃɀʃ@mutyu%% "It is midnight"</p>
+    </TabItem>
+</Tabs>
+
+{/* TODO: AM/PM section */}
+
+{/* TODO: morning, afternoon, evening, bedtime */}
 
 ### Durations
 
