Add more time info

--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -491,9 +491,43 @@ subject. Here's some examples of how to respond to these questions:
     </TabItem>
 </Tabs>
 
-{/* TODO: AM/PM section */}
+Hisyëö uses the 12-hour clock to reduce the need for multiple word ordinals to
+create times like "23:00". Often times, you can deduce which half of the day
+from context. If you need to use the equivalent of "a.m." or "p.m":
 
-{/* TODO: morning, afternoon, evening, bedtime */}
+<Tabs groupId="popöun-zıkto">
+    <TabItem value="latin" label="Latin" default>
+        <p>%%suhot@suhot%% %%tiso@tiso%% %%yë@yë%% %%ılık@ılık%% %%lono@lono%% %%mutyu@mutyu%% "9 o'clock before noon"</p>
+        <p>%%suhot@suhot%% %%tiü@tiü%% %%yë@yë%% %%cıhöü@cıhöü%% %%lono@lono%% %%mutyu@mutyu%% "9 o'clock after noon"</p>
+    </TabItem>
+    <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
+        <p>%%ɐʃɂ̆@suhot%% %%cɟɐ@tiso%% %%ɀʇ@yë%% %%ɽȷʓ̑ȷ@ılık%% %%ʓƨ@lono%% %%ƶ̆ʃɀʃ@mutyu%% "9 o'clock before noon"</p>
+        <p>%%ɐʃɂ̆@suhot%% %%cɟɽʄ@tiü%% %%ɀʇ@yë%% %%ꞇȷɂıɽʄ@cıhöü%% %%ʓƨ@lono%% %%ƶ̆ʃɀʃ@mutyu%% "9 o'clock after noon"</p>
+    </TabItem>
+</Tabs>
+
+For some related relative concepts of time, here's some other possible words:
+
+<Tabs groupId="popöun-zıkto">
+    <TabItem value="latin" label="Latin" default>
+        <p>%%woküt@woküt%% %%kon@kon%% %%socok@socok%% %%lono@lono%% "morning time"</p>
+        <p>%%woküt@woküt%% %%yë@yë%% %%cöüvon@cöüvon%% %%kut@kut%% "breakfast time"</p>
+        <p>%%woküt@woküt%% %%yë@yë%% %%cöüvon@cöüvon%% %%mutyu@mutyu%% "lunch time"</p>
+        <p>%%woküt@woküt%% %%yë@yë%% %%cöüvon@cöüvon%% %%vëlcin@vëlcin%% "dinner time"</p>
+        <p>%%woküt@woküt%% %%yë@yë%% %%küon@küon%% %%nëös@nëös%% "dawn"</p>
+        <p>%%woküt@woküt%% %%yë@yë%% %%küon@küon%% %%könyëc@könyëc%% "dusk"</p>
+        <p>%%woküt@woküt%% %%kon@kon%% %%conzodo@conzodo%% "bedtime"</p>
+    </TabItem>
+    <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
+        <p>%%ʒɔ̆ʄ@woküt%% %%ɔ̃@kon%% %%ɐꞇ̑@socok%% %%ʓƨ@lono%% "morning time"</p>
+        <p>%%ʒɔ̆ʄ@woküt%% %%ɀʇ@yë%% %%ꞇıɽʄɤ̃@cöüvon%% %%ɔ̆ʃ@kut%% "breakfast time"</p>
+        <p>%%ʒɔ̆ʄ@woküt%% %%ɀʇ@yë%% %%ꞇıɽʄɤ̃@cöüvon%% %%ƶ̆ʃɀʃ@mutyu%% "lunch time"</p>
+        <p>%%ʒɔ̆ʄ@woküt%% %%ɀʇ@yë%% %%ꞇıɽʄɤ̃@cöüvon%% %%ɤ͊ʇꞇ̃ɟ@vëlcin%% "dinner time"</p>
+        <p>%%ʒɔ̆ʄ@woküt%% %%ɀʇ@yë%% %%ɔʄɽ̃@küon%% %%ƨʇɽ́ı@nëös%% "dawn"</p>
+        <p>%%ʒɔ̆ʄ@woküt%% %%ɀʇ@yë%% %%ɔʄɽ̃@küon%% %%ɔ̃ıɀ̄ʇ@könyëc%% "dusk"</p>
+        <p>%%ʒɔ̆ʄ@woküt%% %%ɔ̃@kon%% %%ꞇ̃ⱴʌ@conzodo%% "bedtime"</p>
+    </TabItem>
+</Tabs>
 
 ### Durations
 
