add more time info

--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -506,7 +506,7 @@ from context. If you need to use the equivalent of "a.m." or "p.m":
     </TabItem>
 </Tabs>
 
-For some related relative concepts of time, here's some other possible words:
+For some specific times with importance, here's how to translate:
 
 <Tabs groupId="popöun-zıkto">
     <TabItem value="latin" label="Latin" default>
@@ -526,6 +526,21 @@ For some related relative concepts of time, here's some other possible words:
         <p>%%ʒɔ̆ʄ@woküt%% %%ɀʇ@yë%% %%ɔʄɽ̃@küon%% %%ƨʇɽ́ı@nëös%% "dawn"</p>
         <p>%%ʒɔ̆ʄ@woküt%% %%ɀʇ@yë%% %%ɔʄɽ̃@küon%% %%ɔ̃ıɀ̄ʇ@könyëc%% "dusk"</p>
         <p>%%ʒɔ̆ʄ@woküt%% %%ɔ̃@kon%% %%ꞇ̃ⱴʌ@conzodo%% "bedtime"</p>
+    </TabItem>
+</Tabs>
+
+Now you can say many things about the time of day or describe when things occur.
+In order to give any sentence a time that it occurred, we use the %%hoi@hoi%%
+preposition.
+
+<Tabs groupId="popöun-zıkto">
+    <TabItem value="latin" label="Latin" default>
+        %%könyëc@könyëc%% %%ü@ü%% %%woküt@woküt%% %%yë@yë%% %%cöüvon@cöüvon%%
+        %%kut@kut%% %%hoi@hoi%% %%tukwos@tukwos%% "Breakfast is ending at 8"
+    </TabItem>
+    <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
+        %%ɔ̃ıɀ̄ʇ@könyëc%% %%ɽʄ@ü%% %%ʒɔ̆ʄ@woküt%% %%ɀʇ@yë%% %%ꞇıɽʄɤ̃@cöüvon%%
+        %%ɔ̆ʃ@kut%% %%ɂɽɟ@hoi%% %%c̑ʃʒ́@tukwos%% "Breakfast is ending at 8"
     </TabItem>
 </Tabs>
 
